[package]
name = "gzip_zopfli"
version = "0.5.3"
authors = ["programingjd"]
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.zopfli]
version = "0.8"
default-features = false
features = ["std"]

[dependencies.miniz_oxide]
version = "0.7"

[dependencies.crc32fast]
version = "1.4"
default-features = false
features = ["std"]

[profile.release]
debug = false
opt-level = "s"
lto = true
#panic = "abort"
